--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -92,6 +92,9 @@
       <property name="indentation">
        <number>0</number>
       </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
       <property name="headerHidden">
        <bool>false</bool>
       </property>
