--- a/configdialog.ui
+++ b/configdialog.ui
@@ -1,3 +1,9 @@
+/*
+ * Copyright (C) 2015-2016 by Saratoga Data Systems, Inc.
+ * All Rights Reserved.
+ *
+ * Author: Matthew Voss
+ */
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>ConfigDialog</class>
