--- a/flumesettings.ui
+++ b/flumesettings.ui
@@ -21,7 +21,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -37,7 +37,7 @@
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>-20</y>
+            <y>0</y>
             <width>311</width>
             <height>329</height>
            </rect>
@@ -64,13 +64,6 @@
              </property>
              <property name="text">
               <string>compressionLevel</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QLineEdit" name="compressionLevelEdit">
-             <property name="toolTip">
-              <string>Compression effort (0-9) as traded off with time (compressionLevel)</string>
              </property>
             </widget>
            </item>
@@ -245,6 +238,9 @@
              </item>
             </widget>
            </item>
+           <item row="1" column="1">
+            <widget class="QSpinBox" name="compressionLevelBox"/>
+           </item>
           </layout>
          </widget>
         </widget>
@@ -265,9 +261,9 @@
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>-299</y>
+            <y>-3</y>
             <width>311</width>
-            <height>834</height>
+            <height>827</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_2">
@@ -359,13 +355,6 @@
             <widget class="QLineEdit" name="speedMinimumEdit_2">
              <property name="toolTip">
               <string>Minimum speed of transmission (speedMinimum) in kilobytes/second</string>
-             </property>
-            </widget>
-           </item>
-           <item row="30" column="1">
-            <widget class="QLineEdit" name="remoteBinDirFromLocalEdit_2">
-             <property name="toolTip">
-              <string>Ssh looks for flumed in same location as client (remoteBinDirFromLocal)</string>
              </property>
             </widget>
            </item>
@@ -787,7 +776,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButton">
+              <widget class="QPushButton" name="allowFileNameBrowse">
                <property name="text">
                 <string>Browse...</string>
                </property>
@@ -906,6 +895,13 @@
            </item>
            <item row="21" column="1">
             <widget class="QCheckBox" name="measureIPDBox">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="30" column="1">
+            <widget class="QCheckBox" name="remoteBinDirFromLocalBox">
              <property name="text">
               <string/>
              </property>
