--- a/flumesettings.ui
+++ b/flumesettings.ui
@@ -21,7 +21,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -221,6 +221,9 @@
            </item>
            <item row="8" column="1">
             <widget class="QComboBox" name="summonMethodBox">
+             <property name="currentText">
+              <string>inetd</string>
+             </property>
              <item>
               <property name="text">
                <string>ssh</string>
@@ -261,7 +264,7 @@
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>-3</y>
+            <y>0</y>
             <width>311</width>
             <height>827</height>
            </rect>
